fix #1 - create products endpoints
